# fireusairene

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  fire_data.csv  fire_num_state.csv  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/fireusairene/: index.doctree
docs/_build/doctrees/autoapi/fireusairene/fireusairene/: index.doctree
docs/_build/html/: .buildinfo  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_sources/autoapi/fireusairene/: index.rst.txt
docs/_build/html/_sources/autoapi/fireusairene/fireusairene/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/fireusairene/: index.html
docs/_build/html/autoapi/fireusairene/fireusairene/: index.html
docs/_build/jupyter_execute/: example.ipynb
src/fireusairene/: __init__.py  fireusairene.py
tests/: test_fireusairene.py
