[tool.poetry]
name = "fireusairene"
version = "0.1.0"
description = "show fire data in weather USA"
authors = ["Yining Zhang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
